# AutoNavQuad

./: README.md
action_controller/src/: actionController.cpp
imu_integration/: CMakeLists.txt  package.xml
imu_integration/src/: FileReader.cpp  IMU_data.cpp  integ.cpp  nav_integ.cpp  odom_remap.cpp  odom_remap_anil.cpp
octomap_publisher1/: CMakeLists.txt  package.xml
octomap_publisher1/src/: octo2ps.cpp
quad_control/resource/: attitude_controller.yaml  position_controller.yaml  wg_waypoints.txt
quad_description/launch/: spawn_quad.launch
quad_description/urdf/: component_snippets.xacro  iris.xacro  iris_base.xacro  kit_c.urdf  kit_c.xacro  multirotor_base.xacro
quad_description/urdf/sensors/: sonar_sensor.urdf.xacro  static_camera.gazebo.xacro
quad_gazebo/catkin_generated/: package.cmake  pkg.develspace.context.pc.py  pkg.installspace.context.pc.py
quad_gazebo/catkin_generated/installspace/: quad_gazebo.pc  quad_gazeboConfig.cmake
quad_gazebo/launch/: quad_demo.launch
quad_gazebo/launch/spawn/: spawn_quad_kinect_kitchen.launch
quad_joystick_interface/: CMakeLists.txt
quad_joystick_interface/src/: joy.cpp
quad_srdf/: CMakeLists.txt  package.xml
quad_srdf/config/: sensors_kinect.yaml
quad_srdf/launch/: default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  move_group1.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  quad_moveit_controller_manager.launch.xml  quad_moveit_sensor_manager.launch.xml  quad_rviz.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
robot_statepub/: CMakeLists.txt  package.xml
robot_statepub/src/: imu_remap.cpp  robot_tf_publisher.cpp  trajectory_publisher.cpp
